[metadata]
name = unitauto
version = 0.8.1
author = TommyLemon
author_email = tommylemon@qq.com
description = An unit testing platform powered by machine learning. Coding-free, comprehensive and automatic testing for methods/functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TommyLemon/unitauto-py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
